dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/notfound/variable/assignment.alg
algoritmo "erro variavel nao existe"

inicio

    oi <- 5

fimalgoritmo
